# fastapi-assignment

./: Makefile  pyproject.toml
.github/workflows/: python.yaml
src/: main.py  schema.py
src/domain/: base.py  field.py  model.py
tests/: test_main.py
tests/domain/: test_model.py
