[tool.poetry]
name = "fastapi-assignment"
version = "0.1.0"
description = ""
authors = ["m1sk9 <me@m1sk9.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
